--- a/sdf.css
+++ b/sdf.css
@@ -1,6 +1,6 @@
 body{
   background-color: #1C242F;
-  background-image:url("bg1.png") ;
+  background-image:url("img/bg1.png") ;
   background-size: 100% auto;
   margin: 0;
   width: 100%;
