--- a/sdf.css
+++ b/sdf.css
@@ -7,13 +7,12 @@ body{
 }
 #lptp{
 width: 43%;
-height: 36%;
  padding-left: 12%;
 }
 #logomain{
 margin-top: 0.7%;
   width: 95%;
-  height: 21%;}
+}
 #about{
 margin-top: 15px;
   width: 95%;
